--- a/assets/sass/components/projects/_projects.scss
+++ b/assets/sass/components/projects/_projects.scss
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Roboto";
+  src: url("../../../fonts/Roboto/Roboto-Regular.ttf");
+}
+
 .group {
   margin-top: 50px;
   list-style: none;
@@ -7,11 +12,14 @@
 }
 
 .project {
-  font-size: 18px;
   margin-bottom: 30px;
-  line-height: 21px;
-  font-family: Roboto;
+  margin-top: 0;
+  font-family: "Roboto", sans-serif;
+  color: #000000;
+  font-style: normal;
   font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
   text-align: center;
   background: #eaf5f1;
   // width: 290px;
