--- a/assets/sass/components/tabs/_tabs.scss
+++ b/assets/sass/components/tabs/_tabs.scss
@@ -1,3 +1,5 @@
+/* БЛОК МЕНЮ */
+
 ul {
   margin: 0;
   padding: 0;
@@ -15,14 +17,15 @@ p {
   font-family: Roboto;
   font-style: normal;
   font-weight: 300;
-  font-size: 14px;
-  line-height: 16px;
+  font-size: 16px;
+  line-height: 18.75px;
   color: #7f838c;
 }
 
 .header-menu {
   display: flex;
   align-items: center;
+  border-bottom: 1px #eaeaea solid;
 }
 .header-nav {
   display: flex;
@@ -39,9 +42,7 @@ p {
   font-family: Roboto;
   font-size: 16px;
   font-weight: 500;
-  padding-left: 36px;
-  padding-right: 36px;
-  padding-top: 13px;
+  padding: 13px 36px;
   color: #2d5ca6;
 }
 
@@ -52,18 +53,19 @@ p {
   left: 0;
   display: block;
   width: 100%;
-  height: 4px;
+  height: 3px;
   background-color: #2d5ca6;
   opacity: 0;
 }
 
 .nav-link:focus,
+.nav-link:active,
 .nav-link:hover {
   color: #1d1d1d;
   background: rgba(0, 75, 193, 0.05);
 }
 
-.nav-link:focus,
+.nav-link:focus::after,
 .nav-link:hover::after {
   opacity: 1;
 }
@@ -75,6 +77,7 @@ p {
   display: flex;
   flex-wrap: nowrap;
 }
+
 .pic {
   margin-right: 30px;
 }
@@ -90,4 +93,8 @@ p {
   line-height: 18px;
   /* identical to box height */
   color: #004bc1;
+}
+
+.fade:not(.show) {
+  display: none;
 }
