--- a/assets/sass/components/projects/_projects.scss
+++ b/assets/sass/components/projects/_projects.scss
@@ -1,16 +1,3 @@
-@font-face {
-  font-family: "Roboto";
-  src: url("../../../fonts/Roboto/Roboto-Regular.ttf");
-}
-
-.group {
-  margin-top: 50px;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0;
-}
-
 .project {
   margin-bottom: 30px;
   margin-top: 0;
@@ -22,7 +9,8 @@
   line-height: 21px;
   text-align: center;
   background: #eaf5f1;
-  // width: 290px;
   height: 150px;
-  padding: 64.5px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
