--- a/assets/sass/components/tabs/_tabs.scss
+++ b/assets/sass/components/tabs/_tabs.scss
@@ -1,40 +1,23 @@
-/* БЛОК МЕНЮ */
+.tabs-default {
+  &_nav {
+    display: flex;
+    border-bottom: 1px #eaeaea solid;
+  }
 
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
+  &_info {
+    margin-top: 21px;
+    display: flex;
+    flex-wrap: nowrap;
 
-a {
-  text-decoration: none;
-  font-style: normal;
-}
-
-p {
-  margin-top: 7px;
-  margin-bottom: 0;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 16px;
-  line-height: 18.75px;
-  color: #7f838c;
-}
-
-.header-menu {
-  display: flex;
-  align-items: center;
-  border-bottom: 1px #eaeaea solid;
-}
-.header-nav {
-  display: flex;
-}
-
-.header-li {
-  display: flex;
-  text-align: center;
-  height: 45px;
+    &-pic {
+      margin-right: 30px;
+      width: 174px;
+      height: 120px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+    }
+  }
 }
 
 .nav-link {
@@ -44,57 +27,54 @@ p {
   font-weight: 500;
   padding: 13px 36px;
   color: #2d5ca6;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: #2d5ca6;
+    opacity: 0;
+  }
+
+  &:focus,
+  &:active,
+  &:hover {
+    color: #1d1d1d;
+    background: rgba(0, 75, 193, 0.05);
+  }
+
+  &:focus::after,
+  &:hover::after {
+    opacity: 1;
+  }
 }
 
-.nav-link::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  height: 3px;
-  background-color: #2d5ca6;
-  opacity: 0;
-}
-
-.nav-link:focus,
-.nav-link:active,
-.nav-link:hover {
-  color: #1d1d1d;
-  background: rgba(0, 75, 193, 0.05);
-}
-
-.nav-link:focus::after,
-.nav-link:hover::after {
-  opacity: 1;
-}
-
-/* БЛОК ИНФОРМАЦИИ */
-
-.main-info {
-  margin-top: 23px;
+.block {
   display: flex;
-  flex-wrap: nowrap;
-}
-
-.pic {
-  margin-right: 30px;
-}
-.first-news {
-  margin-bottom: 20px;
-}
-.text {
-  margin: 0;
+  flex-direction: column;
+  justify-content: space-between;
   font-family: Roboto;
   font-style: normal;
-  font-weight: normal;
-  font-size: 15px;
-  line-height: 18px;
-  /* identical to box height */
-  color: #004bc1;
-}
 
-.fade:not(.show) {
-  display: none;
+  &_text1 {
+    margin: 0;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 18px;
+    font-weight: 400;
+    color: #004bc1;
+  }
+
+  &_text2 {
+    margin-top: 7px;
+    margin-bottom: 0;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 18.75px;
+    color: #7f838c;
+  }
 }
